crates/editor-codec-macros/tests/compile_fail/retired_duplicate.stderr
error: duplicate retired tag 4
 --> tests/compile_fail/retired_duplicate.rs:6:11
  |
6 | #[durable(retired(4, 4))]
  |           ^^^^^^^^^^^^^
